--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@openzeppelin/contracts": "^5.0.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -43,12 +44,24 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.19.33",
+    "@solana/web3.js": "^1.91.1",
+    "@wagmi/connectors": "^2.6.5",
+    "@wagmi/core": "^2.6.5",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "decimal.js": "^10.4.3",
     "embla-carousel-react": "8.5.1",
+    "ethers": "^6.11.1",
+    "framer-motion": "^12.23.0",
+    "hardhat": "^2.21.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
@@ -63,22 +76,10 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "^3.24.1",
-    "@wagmi/core": "^2.6.5",
-    "@wagmi/connectors": "^2.6.5",
-    "wagmi": "^2.6.5",
     "viem": "^2.8.5",
-    "@solana/web3.js": "^1.91.1",
-    "@solana/wallet-adapter-react": "^0.15.35",
-    "@solana/wallet-adapter-react-ui": "^0.9.35",
-    "@solana/wallet-adapter-base": "^0.9.23",
-    "@solana/wallet-adapter-wallets": "^0.19.33",
-    "zustand": "^4.5.2",
-    "ethers": "^6.11.1",
-    "hardhat": "^2.21.1",
-    "@openzeppelin/contracts": "^5.0.1",
-    "axios": "^1.7.2",
-    "decimal.js": "^10.4.3"
+    "wagmi": "^2.6.5",
+    "zod": "^3.24.1",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^22",
