--- a/package.json
+++ b/package.json
@@ -79,7 +79,10 @@
     "viem": "^2.8.5",
     "wagmi": "^2.6.5",
     "zod": "^3.24.1",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "@orca-so/common-sdk": "^0.6.0-alpha.3",
+    "@orca-so/whirlpools-sdk": "^0.12.8",
+    "@solana/spl-token": "^0.4.9"
   },
   "devDependencies": {
     "@types/node": "^22",
