feat: implement reference-compatible flash loan system with environment configuration
- Add centralized environment configuration matching reference implementation
- Update Orca instruction builder with dynamic imports for build compatibility
- Add comprehensive environment setup script and documentation
- Implement Neon integration service for EVM parameter retrieval
- Add testing scripts for flash loan and Orca instruction validation
- Update flash loan service to use environment configuration
- Add funded wallet setup and contract setup services
- Include detailed documentation for environment setup and keypair usage

Key improvements:
- Environment configuration matches reference implementation exactly
- Proper handling of dummy keypairs for frontend instruction building
- Dynamic imports prevent build-time Solana SDK issues
- Comprehensive testing and debugging scripts
- Clear documentation of architecture differences

--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint",
     "start": "next start",
     "type-check": "tsc --noEmit",
+    "setup": "node scripts/setup-environment.js",
+    "test:flash-loan": "node scripts/test-flash-loan.js",
+    "test:orca": "node scripts/test-orca-instructions.js",
+    "debug:flash-loan": "node scripts/debug-flash-loan-call.js",
     "contracts:copy-abi": "node scripts/update-contracts.js --copy-abi",
     "contracts:copy-all": "node scripts/update-contracts.js --copy-all",
     "contracts:update-addresses": "node scripts/update-contracts.js --update-addresses",
     "contracts:help": "node scripts/update-contracts.js --help"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.31.1",
     "@hookform/resolvers": "^3.9.1",
     "@openzeppelin/contracts": "^5.0.1",
-    "@orca-so/common-sdk": "^0.6.0-alpha.3",
-    "@orca-so/whirlpools-sdk": "^0.12.8",
+    "@orca-so/common-sdk": "^0.6.11",
+    "@orca-so/whirlpools-sdk": "^0.15.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -60,7 +65,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
-    "decimal.js": "^10.4.3",
+    "decimal.js": "^10.6.0",
     "embla-carousel-react": "8.5.1",
     "ethers": "^6.11.1",
     "framer-motion": "^12.23.0",
